Actualizacion de portada,titulo e imagen en seccion Hardware

--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>My Daily Tech</title>
 </head>
@@ -29,10 +26,13 @@
          <img class="profile_pic" src="media/photo_2022-01-18_14-38-11.jpg" alt="">
     </section>
 
-    <main class="review-contenedor">
+    <div class="portada_review">
+        <div class="portada_texto">
+            <h4 style="color: aliceblue;">Samsung Galaxy S10 review: <span class="span_portada"> <br> 2 años de uso</span> </h4>
+        </div>
+    </div>
 
-        <h1 class="titulo_review"> Samsung Galaxy S10: 2 años de uso</h1>
-        <img class="portada" src="media/s10.cameras.jpg" alt="">
+    <main class="review-contenedor">
         <section class="diseño">
             <h3>Diseño</h3>
             <p>El Galaxy S10 es el flagship de la firma coreana para el pasado 2019. Y en su diseño dice mucho. <br>
@@ -64,10 +64,13 @@
         </section>
 
         <section class="hardware">
+            <h3>Hardware</h3>
             <p>No les voy hablar de números. Posee un Exynos 9820 (versión que se vende en mi país) que es el soc flagship de Samsung en el 2019. En estos 2 años de uso nunca tuve problemas de rendimiento alguno, nunca me vi limitado con la potencia del dispositivo. Edición de fotos, videos, redes sociales etc. Tengo que admitir que no soy un usuario que juegue en el teléfono. Me descargue un juego simplemente para probar el rendimiento del mismo y no hubo problemas. El Genshin Impact se movió a 60fps constantes. </p>
+            <img class="portada" src="media/exynos.jpg" alt="">
         </section>
 
         <section class="software">
+            <h3>Software</h3>
             <p>En su momento del lanzamiento, el S10 salió al mercado con Android 9 bajo la capa de personalización de Samsung llamada OneUI 1.5 <br>
                 Actualmente poseo Android 12 con el parche de seguridad de Enero 2022 y con OneUI 4. Esta es su última actualización de Android oficial, pero posee 1 año más de soporte con parches de seguridad y alguna actualización menor de OneUI <br> 
                 Poco hay que decir de OneUI, yo lo resumiría como un híbrido entre iOS y Android. El rendimiento es bueno, faltaria mas. Pero las animaciones no están del todo pulidas como para llegar a las cotas de fluidez de Android stock y el SO de los de Cupertino. En Android 12 Samsung implementó su versión de la tematización de Material You, la cual funciona muy bien y acierta bastante los colores extraídos del fondo de pantalla.
